# DI-SQL-Agent

./: README.md  pyproject.toml  requirements.txt
examples/: source_metadata.json  target_metadata.json
src/: __init__.py  cli.py  comparison_agent.py  metadata.py
