[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "di-sql-agent"
version = "0.1.0"
description = "Generate comparison SELECT statements from relational table metadata"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
di-sql-compare = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
